--- a/client/src/App/style.css
+++ b/client/src/App/style.css
@@ -157,7 +157,7 @@ button {
 
 @media only screen and (min-width: 1200px) {
     .header-wrapper {
-        height: 18vh;
+        height: 29.5vh;
     }
     .header-title {
         width: 45vw;
